--- a/.github/workflows/Integration.yml
+++ b/.github/workflows/Integration.yml
@@ -13,5 +13,10 @@ jobs:
         run: npm install
       - name: angular cli instalation
         run: npm install -g @angular/cli
-      - name: script
+      - name: build
         run: ng build
+      - run: sudo apt-get install rar
+      - run: sudo dnf install rar
+      - run: yum install rar
+      - name: Adding rar
+        run: rar a dist.rar dist
