--- a/.github/workflows/Integration.yml
+++ b/.github/workflows/Integration.yml
@@ -18,4 +18,4 @@ jobs:
       - name: zip addition
         uses: actions/upload-artifact@v2
         with:
-          path: /dist
+          path: dist
